objects/HealthCloudGA__LeadConvertedStatusMapping__mdt.object
<CustomObject>
    <description>Defines the Converted status for a Lead Record Type in Health Cloud</description>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LeadConvertedStatus__c</fullName>
        <description>status on Lead object which is a valid status of type converted</description>
        <label>Lead Converted Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LeadRecordTypeName__c</fullName>
        <description>Name of record type on Lead object which is valid for Health Cloud</description>
        <label>Lead Record Type Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LeadRecordTypeNamespace__c</fullName>
        <description>Lead record type namespace.</description>
        <label>Record Type Namespace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Lead Converted Status Mapping</label>
    <pluralLabel>Lead Converted Status Mappings</pluralLabel>
</CustomObject>